<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.umeshsingh.bookhub.fragment.AboutFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/imgAppLogo"
        android:layout_width="145dp"
        android:layout_height="135dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        app:cardCornerRadius="150dp">

        <ImageView
            android:layout_width="145dp"
            android:layout_height="135dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/book_app_icon"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txtAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgAppLogo"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:fontFamily="monospace"
        android:text="@string/book_mart"
        android:textColor="#d4af37"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtVersionApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtAppName"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:text="@string/app_version_1_0"
        android:textSize="16dp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/txtInformationApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtVersionApp"
        android:padding="10dp"
        android:text="@string/info_in_about"
        android:textColor="#000000"
        android:textSize="17dp" />


    <TextView
        android:id="@+id/txtDeveloped"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtInformationApp"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/developed"
        android:textColor="#000000"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/txtBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDeveloped"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:text="@string/by"
        android:textColor="#000000"
        android:textSize="12dp" />


    <TextView
        android:id="@+id/txtUmeshSingh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtBy"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:text="@string/umesh_singh"
        android:textColor="#000000"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/txtLocationAboutFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtUmeshSingh"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:drawableLeft="@drawable/ic_location"
        android:padding="10dp"
        android:text="@string/india"
        android:textSize="21dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtCopyrightAboutFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:padding="10dp"
        android:text="@string/copyright_2021_by_umesh_singh"
        android:textSize="12dp"
        android:textStyle="bold" />


</RelativeLayout>